- Fixed bug #33532 (Different output for strftime() and date()). - Re-implemented checkdate(), strftime() and gmstrftime() with the new timelib   code.